07-22-20 : Next phase of Deikhan Changes
            - Renamed all advanced discs so they don't conflict with cleric
            - Removed cleric wrath spells (rain brimstone etc.)
            - Divine Rescue: Advanced rescue that heals the target
            - 2h specialization: Additional damage with 2h weapons
            - Divine Grace: Resistence to some affilictions
            - Removed kick
            - Smite is reworked: less damage but usable more often
              Includes a +hit buff -protection debuff so it isn't advised
              to use it while tanking
            Up next for deikhans is auras

07-09-20 : Tweaks to skill/spell difficulty.
            difficulty | Success | Damage
            - trivial      110%    105%
            - easy         100%    118%
            - normal        90%    133%
            - difficult     80%    154%
            - dangerous     70%    182%
            Additionally updated the difficulty of a lot of individual spells
            Mostly buffs, debuffs and utility spells. See helpfiles

07-09-20 : Important change to skill/spell difficulty and damage.
            At some point all skills and spells were short-circuited
            to act like they were all trvial difficulty. This affected
            failure rate and damage. Currently it's impossible to fail
            a skill/spell that is maxed unless you have very low focus.
            We're going to restore this system so that it acts as documented
            in the help files. Take some time to adjust and provide feedback
            on failure rates.
            Here's how this will be working now:
            difficulty | Success | Damage
            - trivial      100%    100%  
            - easy          90%    111%
            - normal        80%    125%
            - difficult     70%    143%
            - dangerous     60%    167%
            Focus is the primary stat to increase the above success percentage. 