@@ -687,6 +687,7 @@ enum spellNumT {
      AFFECT_PAPPY_BLESSING,
      AFFECT_STAFFA_BLESSING,
      AFFECT_UNHOLY_WRATH,
+     AFFECT_HOLY_WRATH,
      AFFECT_GUARDIANS_LIGHT,
      AFFECT_PREENED,
      AFFECT_WET,
