@@ -1,0 +1,2 @@
+A trained deikhan using a shield will sometimes be able to call upon
+his or her deity for extra protection. This is a passive ability.
